[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aibom-tools"
version = "0.1.0"
description = "CLI tool for generating AI Bill of Materials using Snyk API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Dylan Havelock", email = "dylan@example.com"},
]
keywords = ["ai", "bom", "security", "snyk", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "requests>=2.25.0",
    "rich>=10.0.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.900",
]

[project.scripts]
aibom-tools = "aibom_tools.cli:main"
scan = "aibom_tools.cli:scan_main"

[project.urls]
Homepage = "https://github.com/dylanhavelock/aibom-tools"
Repository = "https://github.com/dylanhavelock/aibom-tools.git"
Issues = "https://github.com/dylanhavelock/aibom-tools/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aibom_tools"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
